# multi-controller

./: .gitignore  CLAUDE.md  README.md  config.json  main.py  pyproject.toml
capture/: hotkey.py  input_capture.py  windows_hook_api.py  windows_keyboard_hook.py  windows_mouse_hook.py
config/: config.json
coordinator/: client.py  election.py  protocol.py  service.py
core/: events.py
docs/: AGENTS.md  GUI_REFACTOR_PLAN.md  MANUAL_VALIDATION.md  ROADMAP.md
injection/: __init__.py  key_parser.py  os_injector.py
installer/: MultiScreenPass.iss
model/: events.py
network/: dispatcher.py  frames.py  handshake.py  peer_connection.py  peer_dialer.py  peer_registry.py  peer_reject.py  peer_server.py  tcp_receiver.py  tcp_sender.py
routing/: auto_switch.py  display_state.py  edge_actions.py  edge_detection.py  edge_routing.py  remote_pointer.py  router.py  routing_table.py  sink.py  topology.py
runtime/: app_error_handler.py  app_icon.py  app_identity.py  app_log_buffer.py  app_logging.py  app_settings.py  app_update.py  app_version.py  clip_recovery.py  config_loader.py  config_reloader.py  context.py  diagnostics.py  display.py  group_join.py  gui_style.py  hover_tooltip.py  http_utils.py  layout_diagnostics.py  layout_dialogs.py  layout_editor.py  layout_geometry.py  layouts.py  local_cursor.py  log_manager.py  monitor_inventory.py  monitor_inventory_manager.py  node_dialogs.py  qt_app.py  remote_update_status.py  self_detect.py  settings_page.py  state_watcher.py  status_controller.py  status_reporter.py  status_tray.py  status_view.py  status_window.py  synthetic_input.py  toast_notification.py  (+4 more)
scripts/: build_windows_exe.ps1  build_windows_installer.ps1  export_app_icon.py  mouse_unlock_tool.py  smoke.ps1  (+4 more)
(+218 files in other folders)
