[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-controller"
version = "0.3.23"
description = "LAN keyboard and mouse sharing with lease-based target control"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "pynput>=1.7,<2.0",
  "PySide6>=6.11,<6.12",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0,<7.0",
  "pytest>=8.0,<9.0",
  "pytest-qt>=4.4,<5.0",
  "ruff>=0.12,<0.13",
]

[tool.setuptools.packages.find]
include = [
  "capture",
  "capture.*",
  "coordinator",
  "coordinator.*",
  "core",
  "core.*",
  "injection",
  "injection.*",
  "network",
  "network.*",
  "routing",
  "routing.*",
  "runtime",
  "runtime.*",
  "utils",
  "utils.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
